test/Serialization/restrict-swiftmodule-to-channel.code
// Binary languagemodules are restricted to a channel when set in the compiler.

// RUN: %empty-directory(%t/cache)
// RUN: %empty-directory(%t/build)
// RUN: split-file %s %t --leading-lines

//--- Lib.code
public fn foo() {}

/// Build Lib as a resilient and non-resilient languagemodule
// RUN: %target-language-frontend -emit-module %t/Lib.code -language-version 5 \
// RUN:   -o %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -module-name ResilientLib -enable-library-evolution \
// RUN:   -emit-module-interface-path %t/build/ResilientLib.codeinterface
// RUN: %target-language-frontend -emit-module %t/Lib.code -language-version 5 \
// RUN:   -o %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -module-name NonResilientLib

/// Build a channel restricted Lib.
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel \
// RUN:   %target-language-frontend -emit-module %t/Lib.code -language-version 5 \
// RUN:   -o %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -module-name ChannelLib -enable-library-evolution


/// 2. Test importing the non-resilient no-channel library from a channel compiler.
//--- NonResilientClient.code
import NonResilientLib // expected-error {{the binary module for 'NonResilientLib' was compiled for '', it cannot be imported by the current compiler which is aligned with 'restricted-channel'. Binary module loaded from path:}}
foo()

/// Building a NonResilientLib client should reject the import for a tagged compiler
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel \
// RUN:   %target-language-frontend -typecheck %t/NonResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -verify -verify-ignore-unknown


/// 3. Test importing the resilient no-channel library.
//--- ResilientClient.code
import ResilientLib // expected-reject-error {{the binary module for 'ResilientLib' was compiled for '', it cannot be imported by the current compiler which is aligned with 'restricted-channel'. Binary module loaded from path:}}
 // expected-rebuild-remark @-1 {{rebuilding module 'ResilientLib' from interface}}
 // expected-rebuild-note @-2 {{compiled module is out of date}}
 // expected-rebuild-note @-3 {{compiled for a different distribution channel}}
foo()

/// ResilientLib client should rebuild from languageinterface when available.
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel \
// RUN:   %target-language-frontend -typecheck %t/ResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -verify -verify-additional-prefix rebuild- -Rmodule-interface-rebuild

/// Importing for a different channel should rebuild without cache collision.
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=other-channel \
// RUN:   %target-language-frontend -typecheck %t/ResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -verify -verify-additional-prefix rebuild- -Rmodule-interface-rebuild
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel \
// RUN:   %target-language-frontend -typecheck %t/ResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -verify -Rmodule-interface-rebuild

// RUN: rm %t/build/ResilientLib.codeinterface
// RUN: %empty-directory(%t/cache)

/// Building a ResilientLib client should succeed in no-channel / dev mode.
// RUN: %target-language-frontend -typecheck %t/ResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache

/// Building a ResilientLib client should reject the import for a channel compiler.
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel \
// RUN:   %target-language-frontend -typecheck %t/ResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -verify -verify-ignore-unknown -verify-additional-prefix reject-

/// Building a ResilientLib client should succeed for a channel compiler with LANGUAGE_IGNORE_LANGUAGEMODULE_REVISION
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel LANGUAGE_IGNORE_LANGUAGEMODULE_REVISION=true \
// RUN:   %target-language-frontend -typecheck %t/ResilientClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache


/// 4. Test importing the channel restricted library
//--- ChannelClient.code
import ChannelLib // expected-reject-error {{the binary module for 'ChannelLib' was compiled for 'restricted-channel', it cannot be imported by the current compiler which is aligned with 'other-channel'. Binary module loaded from path:}}
foo()

/// Importing ChannelLib should succeed with the same channel.
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=restricted-channel \
// RUN:   %target-language-frontend -typecheck %t/ChannelClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache

/// Importing ChannelLib should succeed with a dev compiler.
// RUN: %target-language-frontend -typecheck %t/ChannelClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache

/// Importing ChannelLib from a different channel should be rejected.
// RUN: env LANGUAGE_FORCE_LANGUAGEMODULE_CHANNEL=other-channel \
// RUN:   %target-language-frontend -typecheck %t/ChannelClient.code \
// RUN:   -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache \
// RUN:   -verify -verify-ignore-unknown -verify-additional-prefix reject-
